k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -v convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
    - name: "fastapi-svc"
      port: 8080
      targetPort: 6780
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
